--- a/snake.html
+++ b/snake.html
@@ -6,19 +6,24 @@
     </head>
 
     <body>
-        
-        <div id="svg-container">
-        <svg width="500" height="300">
-            <!-- Красный квадрат, который будем перемещать -->
-            <rect id="movable-rect" x="200" y="100" width="100" height="100" 
-                  fill="red" stroke="black" stroke-width="2" />
-        </svg>
-    </div>
 
-    <script>
+        <div id="field">
+            <div id="svg-container">
+                <svg width="102" height="102">
+                    <!-- Красный квадрат, который будем перемещать -->
+                    <rect id="movable-rect" x="0" y="0" width="100" height="100" 
+                        fill="red" stroke="black" stroke-width="2" />
+                </svg>
+            </div>
+        </div>
 
-        
+        <div>
+            <button id="left" onclick="Move(this.id)">&#8624;</button>
+            <button id="right" onclick="Move(this.id)">&#8625;</button>
+        </div>
 
-    </script>
+        <script type="text/javascript" src="snake.js">
+        </script>
+
     </body>
 </html>
