--- a/snake.html
+++ b/snake.html
@@ -8,18 +8,17 @@
     <body>
 
         <div id="field">
-            <div id="svg-container">
-                <svg width="102" height="102">
-                    <!-- Красный квадрат, который будем перемещать -->
+            <!--<div id="svg-container">
+                <svg viewBox="0 0 100 100">
                     <rect id="movable-rect" x="0" y="0" width="100" height="100" 
                         fill="red" stroke="black" stroke-width="2" />
                 </svg>
-            </div>
+            </div>-->
         </div>
 
         <div>
-            <button id="left" onclick="Move(this.id)">&#8624;</button>
-            <button id="right" onclick="Move(this.id)">&#8625;</button>
+            <button id="left" onclick="ChangeDirect(this.id)">&#8624;</button>
+            <button id="right" onclick="ChangeDirect(this.id)">&#8625;</button>
         </div>
 
         <script type="text/javascript" src="snake.js">
